add ignored_paths and request_condition option

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -5,6 +5,8 @@ services:
     public: false
     bind:
       $allowedIps: '%contao_iplogin.allowed_ips%'
+      $ignoredPaths: '%contao_iplogin.ignored_paths%'
+      $requestCondition: '%contao_iplogin.request_condition%'
 
   InspiredMinds\ContaoIpLoginBundle\:
     resource: ../../
