--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,12 @@
     "require": {
         "php": ">=7.1",
         "contao/core-bundle": "^4.9",
-        "symfony/config": "^4.4",
-        "symfony/dependency-injection": "^4.4",
-        "symfony/http-foundation": "^4.4",
-        "symfony/http-kernel": "^4.4",
-        "symfony/security-guard": "^4.4"
+        "symfony/config": "^4.4 || ^5.1",
+        "symfony/dependency-injection": "^4.4 || ^5.1",
+        "symfony/expression-language": "^4.4 || ^5.1",
+        "symfony/http-foundation": "^4.4 || ^5.1",
+        "symfony/http-kernel": "^4.4 || ^5.1",
+        "symfony/security-guard": "^4.4 || ^5.1"
     },
     "autoload": {
         "psr-4": {
