--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,14 @@
     ],
     "require": {
         "php": ">=7.1",
-        "contao/core-bundle": "^4.9",
-        "symfony/config": "^4.4 || ^5.1",
-        "symfony/dependency-injection": "^4.4 || ^5.1",
-        "symfony/expression-language": "^4.4 || ^5.1",
-        "symfony/http-foundation": "^4.4 || ^5.1",
-        "symfony/http-kernel": "^4.4 || ^5.1",
-        "symfony/security-guard": "^4.4 || ^5.1"
+        "contao/core-bundle": "^4.13 || ^5.0",
+        "symfony/config": "^5.1 || ^6.0",
+        "symfony/dependency-injection": "^5.1 || ^6.0",
+        "symfony/expression-language": "^5.1 || ^6.0",
+        "symfony/http-foundation": "^5.1 || ^6.0",
+        "symfony/http-kernel": "^5.1 || ^6.0",
+        "symfony/security-core": "^5.1 || ^6.0",
+        "symfony/security-http": "^5.1 || ^6.0"
     },
     "autoload": {
         "psr-4": {
