--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ],
     "require": {
         "php": ">=7.1",
-        "contao/core-bundle": "^4.13 || ^5.0",
+        "contao/core-bundle": "^5.0",
         "symfony/config": "^5.1 || ^6.0",
         "symfony/dependency-injection": "^5.1 || ^6.0",
         "symfony/expression-language": "^5.1 || ^6.0",
@@ -42,6 +42,6 @@
         "contao-manager-plugin": "InspiredMinds\\ContaoIpLoginBundle\\ContaoManager\\Plugin"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16"
+        "friendsofphp/php-cs-fixer": "^2.16 || ^3.0"
     }
 }
