--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,14 @@
         "contao-manager-plugin": "InspiredMinds\\ContaoIpLoginBundle\\ContaoManager\\Plugin"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16 || ^3.0"
+        "contao/easy-coding-standard": "^6.0",
+        "contao/rector": "^1.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "contao-components/installer": true,
+            "php-http/discovery": false,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
