--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
     "require": {
         "php": ">=8.1",
         "contao/core-bundle": "^5.0",
-        "symfony/config": "^5.4 || ^6.4 || ^7.1",
-        "symfony/dependency-injection": "^5.4 || ^6.4 || ^7.1",
-        "symfony/expression-language": "^5.4 || ^6.4 || ^7.1",
-        "symfony/http-foundation": "^5.4 || ^6.4 || ^7.1",
-        "symfony/http-kernel": "^5.4 || ^6.4 || ^7.1",
-        "symfony/security-core": "^5.4 || ^6.4 || ^7.1",
-        "symfony/security-http": "^5.4 || ^6.4 || ^7.1"
+        "symfony/config": "^6.4 || ^7.1",
+        "symfony/dependency-injection": "^6.4 || ^7.1",
+        "symfony/expression-language": "^6.4 || ^7.1",
+        "symfony/http-foundation": "^6.4 || ^7.1",
+        "symfony/http-kernel": "^6.4 || ^7.1",
+        "symfony/security-core": "^6.4 || ^7.1",
+        "symfony/security-http": "^6.4 || ^7.1"
     },
     "autoload": {
         "psr-4": {
